# pubnix

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  security.yml
.kiro/references/: research.md
.kiro/specs/atl-pubnix/: design.md  requirements.md  tasks.md
.kiro/steering/: meta.md  product.md  structure.md  tech.md
backend/: README.md  alembic.ini  database.py  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: cf032c49b882_initial_database_schema.py
backend/models/: __init__.py  comm.py  metrics.py  ssh_key.py  user.py
backend/routers/: __init__.py  admin.py  applications.py  auth.py  comm.py  integrations.py  monitoring.py  ssh_keys.py  web.py
backend/services/: __init__.py  audit_logger.py  backup_service.py  email_service.py  metrics_collector.py  provisioning_service.py  resource_enforcer.py  ssh_key_service.py  validation_service.py  welcome_service.py
backend/services/auth_backends/: base.py  ldap_backend.py
backend/templates/email/: application_approved.html  application_confirmation.html  application_rejected.html
backend/tests/: __init__.py  test_admin_api.py  test_applications_api.py  test_backup_service.py  test_comm_api.py  test_deploy_docs.py  test_docs_and_welcome.py  test_infrastructure_layout.py  test_integrations_api.py  test_models.py  test_monitoring_endpoints.py  test_nginx_config.py  test_provisioning_service.py  test_public_landing.py  test_resource_management.py  test_security_configs.py  test_ssh_keys_api.py
config/: README.md
config/apparmor/: usr.bin.fcgiwrap
config/nginx/: nginx_dev.conf
config/nginx/sites-available/: pubnix-dev
config/security/fail2ban/: jail.local
config/skel/: .bashrc  .plan  .profile  .project  README_FIRST.txt
config/skel/.ssh/: config
config/skel/public_gemini/: index.gmi
config/skel/public_gopher/: gophermap
config/skel/public_html/: README_CGI.txt  index.html
config/ssh/: sshd_config_dev  sshd_config_prod
docker/: README.md
docker/development/: Dockerfile.pubnix  Dockerfile.web  docker-compose.yml  start-dev.sh
docker/development/keys/: dev_host_key  dev_host_key.pub
docker/testing/: Dockerfile.test  docker-compose.yml
docs/: README.md  community_guidelines.md  deploy.md  unix_basics.md  user_guide.md  web_hosting.md
infrastructure/: README.md
infrastructure/ansible/: inventory.ini  site.yml
infrastructure/systemd/: atl-pubnix-backend.env.example  atl-pubnix-backend.service  nginx-reload.service  nginx-reload.timer
scripts/: README.md
scripts/database/: init.sql
tests/: README.md
web/: README.md  package.json
web/landing/: index.html
(+6 files in other folders)
