[project]
name = "atl-pubnix-backend"
version = "0.1.0"
description = "Backend services for ATL Pubnix system"
authors = [
    {name = "ATL Community", email = "admin@atl.sh"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core web framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    
    # Database
    "sqlmodel>=0.0.14",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    
    # Redis for caching and sessions
    "redis>=5.0.1",
    
    # Authentication and security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    
    # Configuration management
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Needed for EmailStr validation in Pydantic
    "email-validator>=2.1.0",
    
    # HTTP client
    "httpx>=0.25.2",
    
    # Logging and monitoring
    "structlog>=23.2.0",
    
    # System utilities
    "psutil>=5.9.6",
    
    # Email
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.2",
    
    # Development utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Code quality
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    
    # Development tools
    "pre-commit>=3.6.0",
    "watchdog>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "tests"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B017",  # pytest.raises(Exception) is too broad
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.8",
]
